--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="calc-row">
                   <span class="calc-label">Precio por entrada:</span>
-                  <span class="calc-value">$300.00</span>
+                  <span class="calc-value">$350.00</span>
                 </div>
                 <div class="calc-row total-row">
                   <span class="calc-label">Total:</span>
@@ -109,8 +109,8 @@
                 </div>
               </div>
 
-              <!-- Sección de Efectivo (oculto por defecto) -->
-              <div class="cash-section" id="cashSection" style="display: block;">
+              <!-- Sección de Efectivo (desactivada) -->
+              <div class="cash-section" id="cashSection" style="display: none;">
                 <div class="input-group">
                   <label for="efectivoRecibido">Efectivo Recibido</label>
                   <input type="number" id="efectivoRecibido" step="0.01" min="0" class="money-input">
