--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal de Loading para impresión -->
+      <div id="printingModal" class="printing-modal" style="display: none;">
+        <div class="printing-content">
+          <div class="printing-spinner"></div>
+          <h3 id="printingTitle">Imprimiendo boletos...</h3>
+          <p id="printingProgress">0 de 0</p>
+        </div>
+      </div>
     </div>
 
     <script src="client-db.js"></script>
