--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 
           <!-- Sección de Entradas (Columna 2) -->
           <div class="form-section entries-section">
-            <h3>Datos del Boleto</h3>
+            <h3 id="datosBoletoHeader">Datos del Boleto</h3>
             <div class="entries-row">
               <div class="input-group">
                 <label for="entradas">Entrada General</label>
@@ -165,6 +165,47 @@
           <div class="printing-spinner"></div>
           <h3 id="printingTitle">Imprimiendo boletos...</h3>
           <p id="printingProgress">0 de 0</p>
+        </div>
+      </div>
+
+      <!-- Modal para captura de entradas fiscales -->
+      <div id="fiscalModal" class="modal" style="display: none;">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 id="fiscalModalTitle">💵 Configurar Entradas Fiscales en Efectivo</h3>
+            <span class="close" id="closeFiscalModal">&times;</span>
+          </div>
+          <div class="modal-body" id="fiscalModalBody">
+            <div style="padding: 20px;">
+              <p style="margin-bottom: 20px; color: #666;">
+                Ingresa el número de entradas en efectivo que deseas reportar en el reporte fiscal del día.
+                Este valor se limpiará automáticamente cada día.
+              </p>
+              <div class="input-group">
+                <label for="entradasFiscalesInput" style="font-weight: 600; margin-bottom: 8px; display: block;">
+                  Número de Entradas en Efectivo
+                </label>
+                <input
+                  type="number"
+                  id="entradasFiscalesInput"
+                  min="0"
+                  value="0"
+                  class="number-input"
+                  style="width: 100%; font-size: 1.2rem; padding: 12px;"
+                  placeholder="Ejemplo: 5"
+                >
+              </div>
+              <div id="fiscalPreview" style="margin-top: 20px; padding: 15px; background: #f7fafc; border-radius: 8px; display: none;">
+                <p style="margin: 0; color: #2d3748;">
+                  <strong>Monto a reportar:</strong>
+                  <span id="fiscalPreviewAmount" style="color: #2f855a; font-size: 1.1rem; font-weight: 600;">$0.00</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button id="saveFiscalEntries" class="btn-primary">Guardar Configuración</button>
+          </div>
         </div>
       </div>
     </div>
